[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-validator"
version = "0.1.0"
description = "Quantum-Biological Holographic (QBH) Validation Engine for ultra-high precision data validation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "QBH Validation Team", email = "team@qbh-validator.org"},
]
keywords = ["quantum", "validation", "biological", "holographic", "ai", "data-validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=0.45.0",
    "qiskit-aer>=0.12.0",
    "cirq>=1.0.0",
    "pennylane>=0.30.0",
]
bio = [
    "scikit-learn>=1.0.0",
    "networkx>=2.8.0",
    "pandas>=1.3.0",
]
ml = [
    "scikit-learn>=1.0.0",
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]
visualization = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
all = [
    "quantum-validator[quantum,bio,ml,api,visualization,dev,docs]"
]

[project.urls]
Homepage = "https://github.com/jimmyjdejesus-cmyk/quantum-validator"
Documentation = "https://quantum-validator.readthedocs.io/"
Repository = "https://github.com/jimmyjdejesus-cmyk/quantum-validator"
"Bug Tracker" = "https://github.com/jimmyjdejesus-cmyk/quantum-validator/issues"

[project.scripts]
qbh-validate = "quantum_validator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantum_validator*"]

[tool.setuptools.package-data]
quantum_validator = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "quantum: marks tests as quantum computing tests (may require special backends)",
    "bio: marks tests as biological algorithm tests",
    "holographic: marks tests as holographic validation tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["quantum_validator"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]